<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:padding="8dp"
    tools:context=".ui.editor.EditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/hintHumanName"

            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hintHumanName"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hintHumanName" />

        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/hintHumanAge"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hintHumanAge"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="@string/hintHumanAge" />

        <EditText
            android:id="@+id/profession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/hintHumanProfession"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hintHumanProfession"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age"
            tools:text="@string/hintHumanProfession" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/colorPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:contentDescription="@string/humanCardColor"
            android:focusable="true"
            app:backgroundTint="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profession"
            app:srcCompat="@drawable/ic_baseline_color_lens_24"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveHuman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/saveHuman"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>